--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: RUFTEX
 email: hello@sufnitextil.eu
-description: Workwear for Rough situations
+description: Workwear for ROUGH environments.
 baseurl: "/ruftex" # the subpath of your site, e.g. /blog
 url: "https://vestalux.github.io" # the base hostname & protocol for your site
 
@@ -19,3 +19,6 @@ twitter_url:
 
 # Build settings
 markdown: kramdown
+
+# Logo settings
+logo-image-url: assets/images/logo.svg
