--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: RUFTEX
 email: hello@sufnitextil.eu
 description-en: Workwear for ROUGH environments.
-mailing-en: Subscribe to our mailinglist
+mailing-en: Sign up for our mailinglist and receive updates about our launch date.
 baseurl: "/ruftex" # the subpath of your site, e.g. /blog
 url: "https://vestalux.github.io" # the base hostname & protocol for your site
 
