--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description-en: Workwear for ROUGH environments.
 description-hu: Munkaruha a KEMÉNY helyekre.
 mailing-en: Sign up for our mailinglist and receive updates about our launch date.
 mailing-hu: Iratkozzon fel hírlevelünkre, hogy elsőként értesüljön új kollekciónkról.
-baseurl: "/ruftex" # the subpath of your site, e.g. /blog
-url: "https://vestalux.github.io" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://ruftex.eu" # the base hostname & protocol for your site
 
 # Social settings
 500px_url:
