--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description-hu: Munkaruha a KEMÉNY helyekre.
 mailing-en: Sign up for our mailinglist and receive updates about our launch date.
 mailing-hu: Iratkozzon fel hírlevelünkre, hogy elsőként értesüljön új kollekciónkról.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://ruftex.eu" # the base hostname & protocol for your site
+url: "http://ruftex.eu" # the base hostname & protocol for your site
 
 # Social settings
 500px_url:
