--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,10 @@ title: RUFTEX
 email: hello@sufnitextil.eu
 description-en: Workwear for ROUGH environments.
 description-hu: Munkaruha a KEMÉNY helyekre.
-mailing-en: Sign up for our mailinglist and receive updates about our launch date.
-mailing-hu: Iratkozzon fel hírlevelünkre, hogy elsőként értesüljön új kollekciónkról.
+mailing-en: Get in touch for more information.
+mailing-hu: További információért lépjen velünk kapcsolatba.
+catalog-en: Our <a href="http://ruftex.eu/ruftex-final.html">catalog</a> is available online and in <a href="http://ruftex.eu/assets/ruftex-final.pdf">pdf</a> format.
+catalog-hu: <a href="http://ruftex.eu/ruftex-final.html">Katalógusunk</a> elérhető online és letölthető <a href="http://ruftex.eu/assets/ruftex-final.pdf"pdf</a> formátumban.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://ruftex.eu" # the base hostname & protocol for your site
 
@@ -12,10 +14,10 @@ url: "http://ruftex.eu" # the base hostname & protocol for your site
 500px_url:
 facebook_url: "http://facebook.com/Ruftex-137042636884949/"
 github_url:
-gitlab_url: 
-googleplus_url: 
+gitlab_url:
+googleplus_url:
 instagram_url: "https://www.instagram.com/ruftexworkwear/"
-linkedin_url: 
+linkedin_url:
 pinterest_url:
 slack_url:
 twitter_url: "https://twitter.com/ruftexworkwear"
