--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description-hu: Munkaruha a KEMÉNY helyekre.
 mailing-en: Get in touch for more information.
 mailing-hu: További információért lépjen velünk kapcsolatba.
 catalog-en: Our <a href="http://ruftex.eu/ruftex-final.html">catalog</a> is available online and in <a href="http://ruftex.eu/assets/ruftex-final.pdf">pdf</a> format.
-catalog-hu: <a href="http://ruftex.eu/ruftex-final.html">Katalógusunk</a> elérhető online és letölthető <a href="http://ruftex.eu/assets/ruftex-final.pdf"pdf</a> formátumban.
+catalog-hu: <a href="http://ruftex.eu/ruftex-final.html">Katalógusunk</a> elérhető online és letölthető <a href="http://ruftex.eu/assets/ruftex-final.pdf">pdf</a> formátumban.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://ruftex.eu" # the base hostname & protocol for your site
 
