--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: RUFTEX
 email: hello@sufnitextil.eu
 description-en: Professional sewing services.
 description-hu: Profi varrodai szolgáltatások.
-mailing-en: Bérvarrás sportruházattól lakástextilekig.
-mailing-hu: Sewing contractor for sportswear, hometextiles and many more.
+mailing-en: Sewing contractor for sportswear, hometextiles and many more.
+mailing-hu: Bérvarrás sportruházattól lakástextilekig.
 catalog-en: Get in touch for more information.
 catalog-hu: További információért lépjen velünk kapcsolatba.
 baseurl: "/" # the subpath of your site, e.g. /blog
