--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: RUFTEX
 email: hello@sufnitextil.eu
 description-en: Professional sewing services.
 description-hu: Profi varrodai szolgáltatások.
-mailing-en: Sewing contractor for sportswear, hometextiles and many more.
-mailing-hu: Bérvarrás sportruházattól lakástextilekig.
-catalog-en: Get in touch for more information.
-catalog-hu: További információért lépjen velünk kapcsolatba.
+mailing-en: Get in touch for more information.
+mailing-hu: További információért lépjen velünk kapcsolatba.
+catalog-en: Sewing contractor for sportswear, hometextiles and many more.
+catalog-hu: Bérvarrás sportruházattól lakástextilekig.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://ruftex.eu" # the base hostname & protocol for your site
 
