--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description-hu: Profi varrodai szolgáltatások.
 mailing-en: Get in touch for more information.
 mailing-hu: További információért lépjen velünk kapcsolatba.
 catalog-en: Sewing contractor for sportswear, hometextiles and many more.
-catalog-hu: Bérvarrás sportruházattól lakástextilekig.
+catalog-hu: Bérvarrás a sportruházattól  a lakástextilekig.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://ruftex.eu" # the base hostname & protocol for your site
 
